<resources>
    <string name="app_name">TraiLead</string>
    <string name="password_hint">Contraseña</string>
    <string name="repeate_password_hint">Repetir contraseña</string>
    <string name="name_hint">Nombre</string>
    <string name="last_name_hint">Apellido</string>
    <string name="email_hint">Email</string>
    <string name="login_btn_text">Ingresar</string>
    <string name="cancel_btn_text">Cancelar</string>
    <string name="scheme_app_name">trailead</string>
    <string name="register_btn_text">Registrarse</string>
    <string name="trainee">Trainee</string>
    <string name="leader">Leader</string>
    <string name="home">Inicio</string>
    <string name="profile">Perfile</string>

    <!--  Dialog  -->
    <string name="title_error">Error</string>
    <string name="neutral_dialog">Entendido</string>
    <string name="positive_dialog">OK</string>
    <string name="negative_dialog">Cancelar</string>

    <!--    Register    -->
    <string name="error_register">Existe uno o más campos incorrectos, por favor modique los valores y vuelva a registrarse</string>
    <string name="error_user_existe_register">El usuario ya existe</string>
    <string name="success_register">El usuario ha sido creado exitosamente</string>

    <!--    Login    -->
    <string name="error_login">El usuario o la contraseña que ha ingresado es incorrecta, por favor vuelva a intentarlo</string>
    <string name="error_login_home">No se pudo cargar la información del usuario</string>
    <string name="host_login">login</string>

    <!--    Deeplinks    -->
    <string name="host_trainee_home">trainee_home</string>
    <string name="host_leader_home">leader_home</string>

</resources>