<layout>

    <data>

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="registrationViewModel"
            type="com.aferrari.login.viewmodel.register.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:elevation="@dimen/cardview_default_elevation"
            android:theme="@style/Theme.TraiLead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_rg_input_text"
                    style="@style/traiLead_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/name_hint"
                    android:minHeight="@dimen/min_height"
                    android:text="@={registrationViewModel.inputName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_rg_input_text"
                    style="@style/traiLead_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:backgroundTint="@color/black"
                    android:hint="@string/last_name_hint"
                    android:minHeight="@dimen/min_height"
                    android:text="@={registrationViewModel.inputLastName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_name_rg_input_text" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_rg_input_text"
                    style="@style/traiLead_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/min_height"
                    android:text="@={registrationViewModel.inputEmail}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/last_name_rg_input_text" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_rg_input_text"
                    style="@style/traiLead_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/min_height"
                    android:text="@={registrationViewModel.inputPass}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_rg_input_text" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeat_password_rg_input_text"
                    style="@style/traiLead_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/repeate_password_hint"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/min_height"
                    android:text="@={registrationViewModel.inputRepeatPass}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_rg_input_text" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/type_user_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/trainee"
                    android:minHeight="@dimen/min_height"
                    android:onClick="@{() -> registrationViewModel.switchTypeUser()}"
                    android:text="@={registrationViewModel.inputUserType}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/repeat_password_rg_input_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_btn"
                    style="@style/traiLead_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:onClick="@{() -> registrationViewModel.cancel()}"
                    android:text="@string/cancel_btn_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/register_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/type_user_switch" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_btn"
                    style="@style/traiLead_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:onClick="@{() -> registrationViewModel.initRegistration()}"
                    android:text="@string/register_btn_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cancel_btn" />


                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>