<layout>

    <data>

        <variable
            name="loginViewModel"
            type="com.aferrari.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_login"
            style="@style/traiLead_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/card_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:elevation="@dimen/cardview_default_elevation"
            android:theme="@style/Theme.TraiLead"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_input_text"
                    style="@style/traiLead_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:hint="@string/user_hint"
                    android:text="@={loginViewModel.inputName}"
                    app:layout_constraintBottom_toTopOf="@id/password_input_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input_text"
                    style="@style/traiLead_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:hint="@string/password_hint"
                    android:text="@={loginViewModel.inputPass}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_input_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    style="@style/traiLead_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->loginViewModel.login()}"
                    android:text="@string/login_btn_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_input_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>